localize timezone for client

--- a/server/app/templates/index.html
+++ b/server/app/templates/index.html
@@ -4,7 +4,7 @@
   {% for sensor in sensors %}
   <li>{{ sensor.location }}</li>
   <ul>
-    <li>Last updated: {{ sensor.timestamp }} UTC</li>
+    <li>Last updated: {{ sensor.timestamp }}</li>
     <li>Temperature: {{ sensor.temperature }}C</li>
     <li>Humidity: {{ sensor.humidity }}%</li>
   </ul>
