--- a/server/app/templates/base.html
+++ b/server/app/templates/base.html
@@ -1,25 +1,32 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     {% if title %}
     <title>{{ title }} - Automated Home</title>
     {% else %}
     <title>Automated Home</title>
     {% endif %}
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/base.css') }}"
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{
+    url_for('static', filename='styles/base.css') }}"
+    />
   </head>
   <body>
-    <div>
-      <a href="{{ url_for('index') }}">Home</a>
-      <a href="{{ url_for('raw_readings') }}">Raw Data</a>
+    <div class="topnav">
+      <a {% if request.path == url_for('index') %}class="active"{% endif %} href="{{ url_for('index') }}">Home</a>
+      <a {% if request.path == url_for('raw_readings') %}class="active"{% endif %} href="{{ url_for('raw_readings') }}">Raw Data</a>
       <!-- <a href="{{ url_for('login') }}">Login</a> -->
     </div>
-    <hr />
     {% with messages = get_flashed_messages() %} {% if messages %}
     <ul>
+
       {% for message in messages %}
       <li>{{ message }}</li>
       {% endfor %}
     </ul>
-    {% endif %} {% endwith %} <main>{% block content %}{% endblock %}</main>
+    {% endif %} {% endwith %}
+    <main>{% block content %}{% endblock %}</main>
   </body>
 </html>
