--- a/server/app/templates/base.html
+++ b/server/app/templates/base.html
@@ -12,6 +12,7 @@
       href="{{
     url_for('static', filename='styles/base.css') }}"
     />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   </head>
   <body>
     <div class="topnav">
